# Labs-2nd-term

./: README.md
lab1/: Bochka.cpp  Bochka.h  CMakeLists.txt  funcs.cpp  funcs.h  main.cpp  myRect.cpp  myRect.h  myString.cpp  myString.h
lab2/: Bin.cpp  Bin.h  CMakeLists.txt  Circle.cpp  Circle.h  Hex.cpp  Hex.h  MyByte.cpp  MyByte.h  Oct.cpp  Oct.h  Rect.cpp  Rect.h  Shape.cpp  Shape.h  main.cpp
lab3/: BD.cpp  BD.h  CMakeLists.txt  Pair.cpp  Pair.h  Point.cpp  Point.h  main.cpp  myString.cpp  myString.h
lab4/: CMakeLists.txt  Circle.cpp  Circle.h  List.cpp  List.h  Node.cpp  Node.h  Point.cpp  Point.h  main.cpp
